<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/background">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:id="@+id/loginButton"
        android:background="#a0a0e4"
        android:textColor="#ffffff"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerButton"
        android:id="@+id/registerButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="86dp"
        android:textColor="#ffffff"
        android:background="#a0a0e4"
        android:layout_alignStart="@+id/pwd"
        android:layout_alignEnd="@+id/pwd"
        android:layout_alignRight="@+id/pwd"
        android:layout_alignLeft="@+id/pwd"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pwd"
        android:background="#ffffff"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:hint="@string/passwordText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_marginTop="93dp"
        android:background="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/emailText"/>
</RelativeLayout>